# BP_Traffic_Remover

./: CMakeLists.txt  README.md
include/: remover.hpp
src/: main.cpp  remover.cpp
